# markdown-viewer

./: .gitignore  README.md  electron-builder.config.cjs  example.md  package-lock.json  package.json  vite.config.mjs
scripts/: generate-icon.cjs  generate-icon.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/main/: index.js
src/preload/: index.mjs
src/renderer/: index.html
src/renderer/src/: App.jsx  main.jsx
src/renderer/src/components/: DropZone.jsx  EditorPane.jsx  FrontMatterBanner.jsx  MarkdownPreview.jsx  SearchBar.jsx  SplitPane.jsx  StatusBar.jsx  TabBar.jsx  TableOfContents.jsx  Toolbar.jsx  WelcomeScreen.jsx
src/renderer/src/hooks/: useKeyboardShortcuts.js  useMarkdownPipeline.js  useSearch.js  useTabState.js  useTheme.js
src/renderer/src/lib/: api.js  front-matter.js  markdown-pipeline.js  stats.js  toc-extractor.js
src/renderer/src/styles/: global.css
